# automaton-abotv2

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.prebuilt  LICENSE  README.md  SECURITY.md  docker-compose.hands.yml  docker-compose.yml  package-lock.json  package.json  plan.md  pr_replies.json  test  test.rs
.github/workflows/: ci.yml
.jules/: bolt.md  palette.md  sentinel.md
config/: abot.toml
container/: Dockerfile.abot
container/agent-runner/: package-lock.json  package.json
container/agent-runner/src/: ams-mcp-bridge.ts  index.ts  ipc-mcp-stdio.ts
container/skills/ams-skill/: SKILL.md  coordination-patterns.md  memory-patterns.md  tool-reference.md
container/skills/automaton/: SKILL.md
crates/abot-ams/: Cargo.toml
crates/abot-ams/src/: automata.rs  client.rs  continuation.rs  fleet.rs  lib.rs  llm.rs  memory.rs  warden.rs
crates/abot-channels/: Cargo.toml
crates/abot-channels/src/: discord.rs  lib.rs  slack.rs  telegram.rs  traits.rs
crates/abot-cli/: Cargo.toml
crates/abot-cli/src/: main.rs
crates/abot-core/: Cargo.toml
crates/abot-core/src/: config.rs  hand.rs  lib.rs  runtime.rs  signals.rs
crates/abot-llm/: Cargo.toml
crates/abot-mcp/: Cargo.toml
crates/abot-sandbox/: Cargo.toml
crates/abot-security/: Cargo.toml
crates/abot-security/src/: audit.rs  lib.rs  manifest.rs  secrets.rs  taint.rs
crates/abot-security/tests/: manifest_panic_test.rs
crates/abot-telemetry/: Cargo.toml
hands/: README.md
hands/automaton-abot-prime-v2/: HAND.toml  SKILL.md  system_prompt.md
hands/backend-engineer/: HAND.toml  SKILL.md  system_prompt.md
hands/data-analyst/: HAND.toml  SKILL.md  system_prompt.md
hands/frontend-engineer/: HAND.toml  SKILL.md  system_prompt.md
hands/general-assistant/: HAND.toml  SKILL.md  system_prompt.md
hands/memory-curator/: HAND.toml  SKILL.md  system_prompt.md
hands/researcher/: HAND.toml  SKILL.md  system_prompt.md
hands/task-runner/: HAND.toml  SKILL.md  system_prompt.md
hands/technical-writer/: HAND.toml  SKILL.md  system_prompt.md
hands/tl-academic/: HAND.toml  SKILL.md  system_prompt.md
hands/tl-design/: HAND.toml  SKILL.md  system_prompt.md
hands/tl-engineering/: HAND.toml  SKILL.md  system_prompt.md
hands/tl-gamedev/: HAND.toml  SKILL.md  system_prompt.md
hands/tl-marketing/: HAND.toml  SKILL.md  system_prompt.md
hands/tl-paid-media/: HAND.toml  SKILL.md  system_prompt.md
hands/tl-product/: HAND.toml  SKILL.md  system_prompt.md
hands/tl-project-mgmt/: HAND.toml  SKILL.md  system_prompt.md
hands/tl-sales/: HAND.toml  SKILL.md  system_prompt.md
hands/tl-spatial/: HAND.toml  SKILL.md  system_prompt.md
hands/tl-specialized/: HAND.toml  SKILL.md  system_prompt.md
hands/tl-support/: HAND.toml  SKILL.md  system_prompt.md
hands/tl-testing/: HAND.toml  SKILL.md  system_prompt.md
scripts/: run_hands.py
src/: ams-client.ts  config.ts  container-pool.ts  container-runner.ts  container-runtime.ts  dashboard-messages.ts  db.ts  embedded-warden.ts  fleet-config.ts  group-queue.ts  health-server.ts  index.ts  mount-security.ts  observatory-hooks.ts  phone-home.ts  types.ts
src/channels/: gateway.ts
(+15 files in other folders)
